# WAD-2020-BERLIN

./: .gitignore  talk-script.txt
0001-traversing-a-matrix/C#/: HelloWorld.sln
0001-traversing-a-matrix/C#/HelloWorld/: Program.cs
0001-traversing-a-matrix/c99/: CMakeLists.txt  main.c
0001-traversing-a-matrix/c99/src/: config.h  main-friendly.c  main-unfriendly.c
0001-traversing-a-matrix/cpp/: CMakeLists.txt  main.cpp
0001-traversing-a-matrix/cpp/src/: config.h  main-friendly.cpp  main-unfriendly.cpp
0001-traversing-a-matrix/java/src/com/weremsoft/: CacheFriendly.java  CacheUnfriendly.java  Main.java  MainFriendly.java  MainUnfriendly.java
0001-traversing-a-matrix/javascript/: main-friendly.js  main-unfriendly.js  main.js
0002-false-sharing/c99/: CMakeLists.txt  main.c
0002-false-sharing/c99/src/: main.c
0003-SIMD/: CMakeLists.txt
0003-SIMD/html/: 0003_SIMD.html  0003_SIMD.js  0003_SIMD.wasm.map
0003-SIMD/src/: main.c
0004-speed-vs-batery/: Makefile
0004-speed-vs-batery/html/: main_optimized.wasm  main_optimized.wasm.map  main_unoptimized.wasm  main_unoptimized.wasm.map
0004-speed-vs-batery/makefiles/: configure_static_libraries_by_os.mk  define_useful_vars.mk
0004-speed-vs-batery/src/: benchmark_utils.h  config.h  main_optimized.c  main_unoptimized.c
004-speed-vs-batery/: CMakeLists.txt  Makefile  perform.sh
004-speed-vs-batery/html/: Makefile  main_aos.html  main_aos.js  main_aos.wasm  main_aos.wasm.map  main_optimized.html  main_optimized.js  main_optimized.wasm  main_optimized.wasm.map  main_unoptimized.html  main_unoptimized.js  main_unoptimized.wasm  main_unoptimized.wasm.map
004-speed-vs-batery/html_cache_friendly/: Makefile  main_cache_friendly.html  main_cache_friendly.js  main_cache_friendly.wasm  main_cache_friendly.wasm.map
004-speed-vs-batery/html_cache_unfriendly/: Makefile  main_cache_unfriendly.html  main_cache_unfriendly.js  main_cache_unfriendly.wasm  main_cache_unfriendly.wasm.map
004-speed-vs-batery/html_soa/: Makefile  main_soa.html  main_soa.js  main_soa.wasm.map
004-speed-vs-batery/makefiles/: configure_static_libraries_by_os.mk  define_useful_vars.mk
004-speed-vs-batery/src/: benchmark_utils.h  config.h  main_aos.c  main_cache_friendly.c  main_cache_unfriendly.c  main_optimized.c  main_soa.c  main_unoptimized.c
