cmake_minimum_required(VERSION 3.15)
set(CMAKE_C_STANDARD 99)
project(004_speed_vs_batery_optimized C)
project(004_speed_vs_batery_unoptimized C)

find_library(COCOA_LIBRARY Cocoa)
find_library(LIB_GLUT GLUT)
find_library(OPEN_GL_LIBRARY OpenGL)
find_library(CORE_VIDEO_LIBRARY CoreVideo)

include_directories(${CMAKE_SOURCE_DIR}/libs/include)
file(GLOB sources "${CMAKE_SOURCE_DIR}/src/*")
link_directories(${CMAKE_SOURCE_DIR}/libs/static)

if(CMAKE_BUILD_TYPE MATCHES "Debug")
    set(CMAKE_C_FLAGS "-framework IOKit -v")
    message("BUILDING BINARY")
    message("CC compiler : $ENV{CC}")

    add_executable(004_speed_vs_batery_optimized src/main_optimized.c)
    target_link_libraries(004_speed_vs_batery_optimized raylib flecs_static ${OPEN_GL_LIBRARY} ${LIB_GLUT} ${COCOA_LIBRARY} ${CORE_VIDEO_LIBRARY})

    add_executable(004_speed_vs_batery_unoptimized src/main_unoptimized.c)
    target_link_libraries(004_speed_vs_batery_unoptimized raylib flecs_static ${OPEN_GL_LIBRARY} ${LIB_GLUT} ${COCOA_LIBRARY} ${CORE_VIDEO_LIBRARY})
elseif(CMAKE_BUILD_TYPE MATCHES "HTML")
    message("Es html")
    set(CC_PATH $ENV{EMSDK})
    add_compile_definitions(PLATFORM_WEB=${OpenCV_VERSION})
    message("Path to emscripten compiler: ${CC_PATH}")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS_DEFAULT} -g -O1 -s USE_GLFW=3 -s TOTAL_MEMORY=67108864")
    set(CMAKE_EXE_LINKER_FLAGS "../libs/static/libraylib.bc -O1 -g4")
    set(LDLIBS "./libs/static/libraylib.bc")
    add_executable(004_speed_vs_batery_unoptimized.html ./src/main_unoptimized.c ./libs/static/libraylib.bc)
    add_executable(004_speed_vs_batery_optimized.html ./src/main_optimized.c ./libs/static/libraylib.bc)
endif()