cmake_minimum_required(VERSION 3.15)
project(c99 C)

set(CMAKE_C_STANDARD 99)

set(CMAKE_C_FLAGS "-Wall")

if(CMAKE_BUILD_TYPE MATCHES "html")
    message("BUILDING HTML")
    message("CC compiler : $ENV{CC}")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -O1 -g4")
    add_executable(${CMAKE_PROJECT_NAME}-unfriendly.html src/main-unfriendly.c)
    add_executable(${CMAKE_PROJECT_NAME}-friendly.html src/main-friendly.c)
else()
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
    message("BUILDING Binary")
    message("$ENV{CC}")
    add_executable(${CMAKE_PROJECT_NAME}-unfriendly src/main-unfriendly.c)
    add_executable(${CMAKE_PROJECT_NAME}-friendly src/main-friendly.c)
endif()
